# uv-people-screening

./: README.md  main.py  owners.json  pyproject.toml  test.py
src/: fetch-acuris-ilinks.py  fetch-company.py  fetch-ubo.py  main.py
src/.streamlit/: config.toml
src/app_modules/: fetch_acuris_individuals.py  fetch_company.py  fetch_ubo.py  models.py  report_generator.py
src/assets/: owners.json  search_response.json
src/people-screening-app/: fetch_acuris_individuals.py  main.py
src/people_screening_app/: fetch_acuris_individuals.py  fetch_ubo.py  main.py
src/ppl_screen_package/: fetch_acuris_individuals.py  fetch_company.py  fetch_ubo.py  models.py  streamlit_app.py
src/processors/: fetch_acuris_individuals.py  fetch_company.py  fetch_ubo.py  report_boiler.py  report_generator.py
